--- a/SignUp.html
+++ b/SignUp.html
@@ -46,7 +46,7 @@
     </a>
   </div>
   <div class="col media">
-    <a href="#" class=" btn">
+    <a href="Login.html" class=" btn">
        Login
      </a>
     <a href="#" class=" btn">
