--- a/Login.html
+++ b/Login.html
@@ -45,7 +45,7 @@
     </a>
   </div>
   <div class="col media">
-    <a href="#" class=" btn">
+    <a href="SignUp.html" class=" btn">
        SignUp
      </a>
     <a href="#" class=" btn">
