add pages about and login ,signup

--- a/About.html
+++ b/About.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="dist/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <style>
+
 table {
   border: 1;
   width: 100%;
@@ -59,7 +62,37 @@ tr:nth-child(even) {
     <td>50</td>
   </tr>
 </table>
+<h2>Bootstrap Grid</h2>
 
+<hr style="height: 5px;">
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-4" style="background-image: url('Img/: 5jpg;');">Student</div>
+    <div class="col-sm-4" style="background-color:lavenderblush;">Gpa</div>
+    <div class="col-sm-4" style="background-color:lavender;">Id</div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4" style="background-image: url('Img/: 5jpg;');">Mohamed</div>
+    <div class="col-sm-4" style="background-color:lavenderblush;">2.88</div>
+    <div class="col-sm-4" style="background-color:lavender;">1</div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4" style="background-image: url('Img/: 5jpg;');">Ahmed</div>
+    <div class="col-sm-4" style="background-color:lavenderblush;">3</div>
+    <div class="col-sm-4" style="background-color:lavender;">3</div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4" style="background-image: url('Img/: 5jpg;');">Ahmed</div>
+    <div class="col-sm-4" style="background-color:lavenderblush;">3</div>
+    <div class="col-sm-4" style="background-color:lavender;">3</div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4" style="background-image: url('Img/: 5jpg;');">Ahmed</div>
+    <div class="col-sm-4" style="background-color:lavenderblush;">3</div>
+    <div class="col-sm-4" style="background-color:lavender;">3</div>
+  </div>
+</div>
 </body>
 </html>
 
