--- a/Images.html
+++ b/Images.html
@@ -1,197 +1,202 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <link rel="stylesheet" href="dist/css/bootstrap-theme.min.css">
-<style>
-div.gallery {
-  margin: 20px;
-  border: 1px solid #ccc;
-  float: left;
-  width: 180px;
-  height: 300px;
-  text-align: justify;
-}
+  <style>
+    div.gallery {
+      margin: 20px;
+      border: 1px solid #ccc;
+      float: left;
+      width: 180px;
+      height: 300px;
+      text-align: justify;
+    }
 
-div.gallery:hover {
-  border: 1px solid #777;
-}
+    div.gallery:hover {
+      border: 1px solid #777;
+    }
 
-div.gallery img {
-  width: 100%;
-  height: auto;
-}
-.container {
-    position: relative;
-    padding: 10px 60px 20px 90px;
-  } 
+    div.gallery img {
+      width: 100%;
+      height: auto;
+    }
 
-</style>
+    .container {
+      position: relative;
+      padding: 10px 60px 20px 90px;
+    }
+  </style>
 </head>
+
 <body>
-    <div class="search-container">
-        <form >
-          <input type="text" placeholder="Search.."style="width: 500px;height: 40px;" name="search">
-          <button type="submit" class="btn btn-success" style="width: 100px;height: 45px;"><i class="fa fa-search"></i>Search</button>
-        </form>
+  <h1 style="text-align: center;">Image Gallary</h1>
+
+  <div class="search-container" style="text-align: center;">
+    <form>
+      <input type="text" placeholder="Search.." style="width: 500px;height: 40px;" name="search">
+      <button type="submit" class="btn btn-success" style="width: 100px;height: 45px;"><i
+          class="fa fa-search"></i>Search</button>
+    </form>
+  </div>
+  <div class="container">
+
+    <div class="gallery">
+      <a target="_blank" href="Img/bicycle.png">
+        <img src="Img/bicycle.png" alt="Laptop " width="600" height="400">
+      </a>
+      <div>
+        <ul>
+          <li>
+            <p style="text-align:left;">new bicycle</p>
+          </li>
+          <li>
+            <p style="text-align:left;"> price : 20$</p>
+          </li>
+        </ul>
       </div>
-    <h1>Image Gallary</h1>
-    <div class="container">
+    </div>
 
-<div class="gallery">
-  <a target="_blank" href="Img/bicycle.png">
-    <img src="Img/bicycle.png" alt="Laptop " width="600" height="400">
-  </a>
-  <div>
-      <ul>
+    <div class="gallery">
+      <a target="_blank" href="Img/laptop.jpg">
+        <img src="Img/laptop.jpg" alt="Laptop" width="600" height="400">
+      </a>
+      <div>
+        <ul>
           <li>
-          <p style="text-align:left;">new bicycle</p>  
+            <p style="text-align:left;">new Laptop</p>
           </li>
           <li>
-            <p style="text-align:left;">  price : 20$</p>   
-        </li>
-      </ul>
-  </div>
-</div>
+            <p style="text-align:left;"> price : 70$</p>
+          </li>
+        </ul>
+      </div>
+    </div>
 
-<div class="gallery">
-  <a target="_blank" href="Img/laptop.jpg">
-    <img src="Img/laptop.jpg" alt="Laptop" width="600" height="400">
-  </a>
-  <div >
-    <ul>
-        <li>
-        <p style="text-align:left;">new Laptop</p>  
-        </li>
-        <li>
-          <p style="text-align:left;">  price : 70$</p>   
-      </li>
-    </ul>
-</div>
-</div>
+    <div class="gallery">
+      <a target="_blank" href="Img/lcd.jpg">
+        <img src="Img/lcd.jpg" alt="lcd" width="600" height="400">
+      </a>
+      <div>
+        <ul>
+          <li>
+            <p style="text-align:left;">new LCD</p>
+          </li>
+          <li>
+            <p style="text-align:left;"> price : 60$</p>
+          </li>
+        </ul>
+      </div>
+    </div>
 
-<div class="gallery">
-  <a target="_blank" href="Img/lcd.jpg">
-    <img src="Img/lcd.jpg" alt="lcd" width="600" height="400">
-  </a>
-  <div >
-    <ul>
-        <li>
-        <p style="text-align:left;">new LCD</p>  
-        </li>
-        <li>
-          <p style="text-align:left;">  price : 60$</p>   
-      </li>
-    </ul>
-</div>
-</div>
+    <div class="gallery">
+      <a target="_blank" href="Img/washingMachine.jpg">
+        <img src="Img/washingMachine.jpg" alt="washingMachine" width="600" height="400">
+      </a>
+      <div>
+        <ul>
+          <li>
+            <p style="text-align:left;">washingMachine</p>
+          </li>
+          <li>
+            <p style="text-align:left;"> price : 50$</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="gallery">
+      <a target="_blank" href="Img/mobile.png">
+        <img src="Img/mobile.png" alt="mobile" width="600" height="400">
+      </a>
+      <div>
+        <ul>
+          <li>
+            <p style="text-align:left;">new Mobile</p>
+          </li>
+          <li>
+            <p style="text-align:left;"> price : 20$</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="gallery">
+      <a target="_blank" href="Img/Book.png">
+        <img src="Img/Book.png" alt="Book" width="600" height="400">
+      </a>
+      <div>
+        <ul>
+          <li>
+            <p style="text-align:left;">new bicycle</p>
+          </li>
+          <li>
+            <p style="text-align:left;"> price : 20$</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="gallery">
+      <a target="_blank" href="Img/Book.png">
+        <img src="Img/Book.png" alt="Book" width="600" height="400">
+      </a>
+      <div>
+        <ul>
+          <li>
+            <p style="text-align:left;">new bicycle</p>
+          </li>
+          <li>
+            <p style="text-align:left;"> price : 20$</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="gallery">
+      <a target="_blank" href="Img/Book.png">
+        <img src="Img/Book.png" alt="Book" width="600" height="400">
+      </a>
+      <div>
+        <ul>
+          <li>
+            <p style="text-align:left;">new bicycle</p>
+          </li>
+          <li>
+            <p style="text-align:left;"> price : 20$</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="gallery">
+      <a target="_blank" href="Img/Book.png">
+        <img src="Img/Book.png" alt="Book" width="600" height="400">
+      </a>
+      <div>
+        <ul>
+          <li>
+            <p style="text-align:left;">new bicycle</p>
+          </li>
+          <li>
+            <p style="text-align:left;"> price : 20$</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="gallery">
+      <a target="_blank" href="Img/Book.png">
+        <img src="Img/Book.png" alt="Book" width="600" height="400">
+      </a>
+      <div>
+        <ul>
+          <li>
+            <p style="text-align:left;">new bicycle</p>
+          </li>
+          <li>
+            <p style="text-align:left;"> price : 20$</p>
+          </li>
+        </ul>
+      </div>
+    </div>
 
-<div class="gallery">
-  <a target="_blank" href="Img/washingMachine.jpg">
-    <img src="Img/washingMachine.jpg" alt="washingMachine" width="600" height="400">
-  </a>
-  <div >
-    <ul>
-        <li>
-        <p style="text-align:left;">washingMachine</p>  
-        </li>
-        <li>
-          <p style="text-align:left;"> price : 50$</p>   
-      </li>
-    </ul>
-</div>
-</div>
-<div class="gallery">
-    <a target="_blank" href="Img/mobile.png">
-      <img src="Img/mobile.png" alt="mobile" width="600" height="400">
-    </a>
-    <div>
-        <ul>
-            <li>
-            <p style="text-align:left;">new Mobile</p>  
-            </li>
-            <li>
-              <p style="text-align:left;">  price : 20$</p>   
-          </li>
-        </ul>
-    </div>
   </div>
-  <div class="gallery">
-    <a target="_blank" href="Img/Book.png">
-      <img src="Img/Book.png" alt="Book" width="600" height="400">
-    </a>
-    <div>
-        <ul>
-            <li>
-            <p style="text-align:left;">new bicycle</p>  
-            </li>
-            <li>
-              <p style="text-align:left;">  price : 20$</p>   
-          </li>
-        </ul>
-    </div>
-  </div>
-  <div class="gallery">
-    <a target="_blank" href="Img/Book.png">
-      <img src="Img/Book.png" alt="Book" width="600" height="400">
-    </a>
-    <div>
-        <ul>
-            <li>
-            <p style="text-align:left;">new bicycle</p>  
-            </li>
-            <li>
-              <p style="text-align:left;">  price : 20$</p>   
-          </li>
-        </ul>
-    </div>
-  </div>  <div class="gallery">
-    <a target="_blank" href="Img/Book.png">
-      <img src="Img/Book.png" alt="Book" width="600" height="400">
-    </a>
-    <div>
-        <ul>
-            <li>
-            <p style="text-align:left;">new bicycle</p>  
-            </li>
-            <li>
-              <p style="text-align:left;">  price : 20$</p>   
-          </li>
-        </ul>
-    </div>
-  </div>  <div class="gallery">
-    <a target="_blank" href="Img/Book.png">
-      <img src="Img/Book.png" alt="Book" width="600" height="400">
-    </a>
-    <div>
-        <ul>
-            <li>
-            <p style="text-align:left;">new bicycle</p>  
-            </li>
-            <li>
-              <p style="text-align:left;">  price : 20$</p>   
-          </li>
-        </ul>
-    </div>
-  </div>
-  <div class="gallery">
-    <a target="_blank" href="Img/Book.png">
-      <img src="Img/Book.png" alt="Book" width="600" height="400">
-    </a>
-    <div>
-        <ul>
-            <li>
-            <p style="text-align:left;">new bicycle</p>  
-            </li>
-            <li>
-              <p style="text-align:left;">  price : 20$</p>   
-          </li>
-        </ul>
-    </div>
-  </div>
-  
-</div>
 
 </body>
+
 </html>
-
-
