--- a/Login.html
+++ b/Login.html
@@ -19,19 +19,19 @@
 }
   </script>
 <div class="container">
-  <form action="/action_page.php">
+  <form">
     <div class="row">
       <h2 style="text-align:center">Login Page</h2>
       <div class="col">
         <input type="text" name="username" placeholder="Username" required>
         <input type="password" name="password" id="myInput" placeholder="Password" required >
-       <div> Show Password <input type="checkbox" onclick="myFunction()"></div>
+       <div> Show Password<input type="checkbox" id="ceck" onclick="myFunction()"></div>
         <input type="submit" value="Login">
       </div>
       
     </div>
   </form>
-</div>
+
 
 <div class="col media">
     <a href="#" class="fb btn">
@@ -52,7 +52,7 @@
        Forget Password
     </a>
   </div>
-  
+</div>
 
 </body>
 </html>
