--- a/SignUp.html
+++ b/SignUp.html
@@ -4,13 +4,23 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <Link rel="stylesheet" href="style.css"/>
 <style>
+#message{
+/* position: absolute; */
+/* bottom: -30px; */
+color: rgb(6, 238, 18);
+font-size: 15px;
+display: none;
+}
+#password{
+  margin-bottom: 20px;
+}
 
 </style>
 </head>
 <body>
   <script>
     function myFunction() {
-  var x = document.getElementById("myInput");
+  var x = document.getElementById("password");
   if (x.type === "password") {
     x.type = "text";
   } else {
@@ -19,21 +29,20 @@
 }
   </script>
 <div class="container">
-  <form action="/action_page.php">
+  <form>
     <div class="row">
       <h2 style="text-align:center">SignUP Page</h2>
       <div class="col">
-        <input type="text" name="username" placeholder="Username" required>
-        <input type="email" name="E-mail" placeholder="E-mail" required>
-        <input type="password" name="password" placeholder="Password" id="myInput" required>
-        <input type="password" name="Confirm password" placeholder="Confirm Password" required>
+        <input type="text" name="username" placeholder="Username" >
+        <input type="email" name="E-mail" placeholder="E-mail" >
+        <input type="password" placeholder="Password" id="password" >
+       <p id="message">Password is strenght</p>
+       <div> Show Password <input type="checkbox" onclick="myFunction()"></div>
         <input type="submit" value="Register">
       </div>
       
     </div>
   </form>
-</div>
-
 <div class="col media">
     <a href="#" class="fb btn">
       <i class="fa fa-facebook fa-fw"></i> SignUP with Facebook
@@ -53,7 +62,21 @@
        Forget Password
     </a>
   </div>
-  
+</div>
+<script>
+  var password = document.getElementById("password")
+  var msg = document.getElementById("message")
+  password.addEventListener('input', () => {
+    if (password.value.length > 5) {
+      msg.style.display = "block"
+      password.style.marginBottom = "0px"
+    } else {
+      msg.style.display = "none"
+      password.style.marginBottom = "20px"
+    }
+  })
+</script>
+ 
 
 </body>
 </html>
