--- a/Index.html
+++ b/Index.html
@@ -27,18 +27,23 @@ document.getElementById("idd").innerHTML="your Subject is " +data;
     <li><a href="ContactUs.html">Contact</a></li>
     <li><a href="About.html">About</a></li>
     <li>
-      <select onchange="function_color()" name="color" id="drop" size="1" style="height: 30px;width: 100px;margin: 10px;color: rgb(250, 250, 250);background-color: #503cc4;">
+      <select onchange="function_color()" name="color" id="drop" size="1" style="height: 30px;width: 100px;margin: 10px;color: rgb(250, 250, 250);background-color: #503cc4;border: .5;">
         <li> <option value="web" >web</option></li>
        <li> <option value="mobile" >mobile</option></li>
         <li><option value="desktop" >desktop</option></li>
       </select>
+      
     </li>
+    <li><a href="Login.html">Login</a></li>
+    <li><a href="SignUp.html">Register</a></li>
     <div class="search-container">
       <form >
         <input type="text" placeholder="Search.."style="width: 500px;height: 40px;" name="search">
         <button type="submit" class="btn btn-success" style="width: 100px;height: 45px;"><i class="fa fa-search"></i>Search</button>
       </form>
     </div>
+   
+   
   </ul>
   <div class="hero-image">
     <div class="hero-text animate">
@@ -47,8 +52,9 @@ document.getElementById("idd").innerHTML="your Subject is " +data;
       <h1 style="font-size:50px">Section 6</h1>
 
       <p>And I'm a Developer</p>
-      <button class="btn btn-info" type="button" style="width: 100px;"><a href="Login.html">Login</a></button>
-      <button class="btn btn-primary" type="button" style="width: 100px;"><a href="SignUp.html">Register</a></button>
+      <button class="btn btn-success" type="button" formaction="Login.html" style="width: 100px;"><a href="Login.html" style="text-decoration: none;">Login</a></button>
+      <button class="btn btn-primary" type="button" formaction="SignUp.html" style="width: 100px;" style="text-decoration: none;"><a href="SignUp.html">Register</a></button>
+      
 
     </div>
   </div>
