--- a/SignUp.html
+++ b/SignUp.html
@@ -33,9 +33,9 @@ display: none;
     <div class="row">
       <h2 style="text-align:center">SignUP Page</h2>
       <div class="col">
-        <input type="text" name="username" placeholder="Username" >
-        <input type="email" name="E-mail" placeholder="E-mail" >
-        <input type="password" placeholder="Password" id="password" >
+        <input type="text" name="username" placeholder="Username"required >
+        <input type="email" name="E-mail" placeholder="E-mail" required>
+        <input type="password" placeholder="Password" id="password" required>
        <p id="message">Password is strenght</p>
        <div> Show Password <input type="checkbox" onclick="myFunction()"></div>
         <input type="submit" value="Register">
